--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "ityped": "^1.0.3",
     "jest": "^27.4.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
@@ -39,6 +39,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.1"
+    "@testing-library/jest-dom": "^5.16.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6"
   }
 }
